[package]
name = "k_nn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
ball-tree = "0.4.0"
itertools = "0.10.5"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
num-traits = "0.2.15"
petal-neighbors = "0.8.0"
polars = { version = "0.29.0", features = ["ndarray"] }
proptest = "1.1.0"
rand = "0.8.5"
rayon = "1.7.0"
tools = { version = "0.1.0", path = "../tools" }
